[project]
name = "deployment-migration"
version = "0.1.0"
description = ""
authors = [
    {name = "Nicolas Harlem Eide",email = "nicolas@harlemeide.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "types-mock (>=5.2.0.20250306,<6.0.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
